Use fontsource to avoid content shifting (#39)

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -25,6 +25,7 @@ html {
   box-sizing: inherit;
 }
 body {
+  font-family: "Source Sans Pro";
   background-color: var(--bg-color);
   color: var(--main-color);  
   margin: 0;
